--- a/milestone 1-2/index.html
+++ b/milestone 1-2/index.html
@@ -10,7 +10,7 @@
     <div class="resume-container">
       <!-- Left Section -->
       <div class="left-section">
-        <img src="profile.jpg" alt="Profile Picture" class="profile-picture" />
+        <img src="profile-1.jpg" alt="Profile Picture" class="profile-picture" />
         <section id="objective">
           <h3 style="color: #ffa500">Career Objective</h3>
           <p style="text-align: justify; hyphens: auto">
