--- a/milestone 1-2/index.html
+++ b/milestone 1-2/index.html
@@ -77,16 +77,11 @@
         <section id="work-experience">
           <h3>Work Experience</h3>
           <p>
-            <b>Work On My YouTube Channels:</b>
-            <p><b>1st Channel:</b><a
+            <b>Work On My YouTube Channel:</b>
+            <p><b>Channel Link:</b><a
               href="https://www.youtube.com/channel/UCu2rw6nY5yFxZzNzJVDW81Q"
               target="_blank"
               > &nbsp;Chamakte Sitare</a
-            ></p>
-            <p><b>2nd Channel:</b><a
-              href="https://www.youtube.com/channel/UC7eDrrXaLoYW8sFES9q2jcg"
-              target="_blank"
-              > &nbsp;Abrish Kanwal Voice</a
             ></p>
           </p><br>
           <p><b>Role:</b>Freelancer & YouTuber</p>
